@@ -10,7 +10,7 @@ $TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['clearAllCache_a
 // Must use '&" with tcemain hook!!! Important for proper work of the hook.
 $TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['processDatamapClass']['tx_realurl'] = 'EXT:realurl/class.tx_realurl_tcemain.php:&tx_realurl_tcemain';
 
-$TYPO3_CONF_VARS['FE']['addRootLineFields'].= ',tx_realurl_pathsegment';
+$TYPO3_CONF_VARS['FE']['addRootLineFields'].= ',tx_realurl_pathsegment,tx_realurl_exclude';
 
 // Include configuration file
 $_realurl_conf = @unserialize($_EXTCONF);
