@@ -1,13 +1,10 @@
 <?php
-if (!defined ("TYPO3_MODE")) 	die ("Access denied.");
+if (!defined ('TYPO3_MODE')) 	die ('Access denied.');
 
-if (TYPO3_MODE=="BE")	{
+if (TYPO3_MODE=='BE')	{
+	t3lib_extMgm::addModule('tools','txrealurlM1','',t3lib_extMgm::extPath($_EXTKEY).'mod1/');
 
-		//
-	t3lib_extMgm::addModule("tools","txrealurlM1","",t3lib_extMgm::extPath($_EXTKEY)."mod1/");
-
-
-		// Add Web>Info module:
+	// Add Web>Info module:
 	t3lib_extMgm::insertModuleFunction(
 		'web_info',
 		'tx_realurl_modfunc1',
@@ -18,17 +15,30 @@ if (TYPO3_MODE=="BE")	{
 	);
 }
 
-$TCA['pages']['columns']['tx_realurl_pathsegment'] = array(
-	'label' => 'LLL:EXT:realurl/locallang_db.xml:pages.tx_realurl_pathsegment',
-	'exclude' => 1,
-	'config' => Array (
-		'type' => 'input',
-		'size' => '30',
-		'max' => '30',
-		//'eval' => 'uniqueInPid'	// DON'T use this anyway, it is very confusing when a path is automatically set!
-	)
+$TCA['pages']['columns'] += array(
+	'tx_realurl_pathsegment' => array(
+		'label' => 'LLL:EXT:realurl/locallang_db.xml:pages.tx_realurl_pathsegment',
+		'displayCond' => 'FIELD:tx_realurl_exclude:!=:1',
+		'exclude' => 1,
+		'config' => array (
+			'type' => 'input',
+			'size' => '30',
+			'max' => '30',
+			//'eval' => 'uniqueInPid'	// DON'T use this anyway, it is very confusing when a path is automatically set!
+		),
+	),
+	'tx_realurl_exclude' => array(
+		'label' => 'LLL:EXT:realurl/locallang_db.xml:pages.tx_realurl_exclude',
+		'exclude' => 1,
+		'config' => array (
+			'type' => 'check',
+			'items' => array(
+				array('', ''),
+			),
+		),
+	),
 );
 
-t3lib_extMgm::addToAllTCAtypes('pages', 'tx_realurl_pathsegment', t3lib_div::compat_version('4.2') ? '1' : '2', 'after:nav_title');
+t3lib_extMgm::addToAllTCAtypes('pages', 'tx_realurl_pathsegment,tx_realurl_exclude', t3lib_div::compat_version('4.2') ? '1' : '2', 'after:nav_title');
 
 ?>
