@@ -112,6 +112,7 @@ CREATE TABLE tx_realurl_redirects (
 #
 CREATE TABLE pages (
 	tx_realurl_pathsegment varchar(30) DEFAULT '' NOT NULL,
+	tx_realurl_exclude int(1) DEFAULT '0' NOT NULL,
 );
 
 #
